prettied up the redirection link, and hopefully got rid of the initial on-load flicker of hidden elements... it's a chormium bug

--- a/front/style/main.scss
+++ b/front/style/main.scss
@@ -4,12 +4,15 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 body {
   display: grid;
   align-content: center;
-  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 300ms ease;
 
   .content {
     height: 100%;
@@ -81,6 +84,7 @@ body {
       width: 100%;
       text-align: center;
       transition: opacity 500ms ease-out;
+      color: #474e55;
 
       &.visible {
         opacity: 1;
@@ -88,6 +92,7 @@ body {
 
       .progress-bar-wrapper {
         border: 1px solid #0681B5;
+        border-radius: 9999px;
         width: 50%;
         max-width: 200px;
         margin: 0 auto 0.5em;
@@ -96,6 +101,7 @@ body {
 
         .progress {
           position: absolute;
+          border-radius: 9999px;
           background-color: rgba(121, 183, 210, 0.598);
           top: 0;
           right: 0;
@@ -112,15 +118,20 @@ body {
         }
       }
 
+      #cancel:hover {
+        text-decoration: none;
+      }
       .go-to-gram {
         display: flex;
         justify-content: center;
         align-items: center;
         text-decoration: none;
-        color: rgb(71, 78, 85);
+        color: #474e55;
+
         &:hover {
           color: #0681B5;
         }
+
         .fab {
           font-size: 2em;
           margin-left: 0.35em;
@@ -132,6 +143,9 @@ body {
 
 body {
   &.loaded {
+    visibility: visible;
+    opacity: 1;
+
     .content {
       visibility: visible;
       opacity: 1;
